# code-review-env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  spaces_config.yml  validate.py
graders/: __init__.py  base_grader.py  bug_grader.py  composite_grader.py  matching.py  penalties.py  security_grader.py  style_grader.py
server/: app.py  code_review_environment.py
tasks/: __init__.py  base_task.py  task_registry.py
tasks/easy/: diff.patch  off_by_one.py
tasks/hard/: diff.patch  payment_pr.py
tasks/medium/: diff.patch  sql_injection_logic.py
