[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "0.1.0"
description = "Code Review & Security Audit OpenEnv Environment"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai>=2.7.2",
    "PyYAML==6.0.1",
    "python-multipart==0.0.9",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_review_env*"]

[project.scripts]
server = "server.app:main"
